# Vala-Practice

./: .anjuta_sym_db.db  configure
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
pricecalc-0.1/: Makefile.am  Makefile.in  configure.ac
pricecalc-0.1/src/: Makefile.am  Makefile.in  discount.c  discount.vala  discount_factory.c  discount_factory.vala  pricecalc.c
src/: Makefile.am  Makefile.in  discount_factory.vala~  pricecalc.c  pricecalc.ui  pricecalc.vala
